# Amin_gen

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: demo_config.yml  evaluation_exploration_config.yml  exploration_config.yml  gwp_sample.csv  kinetics_coverage_sample.csv  local_properties_sample.csv  local_reactivity_sample.csv  pfas_list_sample.csv  sample_input.csv
outputs/: demo_screening.xlsx  evaluation_exploration_screening.xlsx  exploration_screening.xlsx  local_generation_dry_run.xlsx
outputs/evaluation_exploration_charts/: plots_index.csv
outputs/evaluation_exploration_csv/: amine_class_summary.csv  amine_summary.csv  candidate_breakdown.csv  coverage.csv  planned_api.csv  rejected.csv  review_required.csv  run_stats.csv  summary.csv  variable_graph_explanation.md
scripts/: generate_amine_charts.py
src/gas_screening_mvp/: cli.py  config_loader.py  pipeline.py
src/gas_screening_mvp/classification/: pfas_rules.py
src/gas_screening_mvp/config/: default.yml
src/gas_screening_mvp/derivation/: candidate_annotations.py  phase.py  summary_builder.py  supply_class.py
src/gas_screening_mvp/domain/: api.py  models.py
src/gas_screening_mvp/export/: csv_exporter.py  excel_exporter.py
src/gas_screening_mvp/generation/: amine_template.py  fluorocarbon_formula.py  local_mutation.py  pubchem_expansion.py  registry.py  seed_generator.py  semiconductor_amine.py
tests/: test_api_signature.py  test_generation_planning.py  test_pfas_rules.py  test_phase_supply.py  test_pipeline_smoke.py  test_pubchem_remote.py  test_selection.py
(+27 files in other folders)
