[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas-screening-mvp"
version = "0.1.0"
description = "Semiconductor gas candidate screening MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MVP Implementation"}]
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
chem = [
  "rdkit>=2023.9",
  "chemicals>=1.3",
  "thermo>=0.3",
  "CoolProp>=6.6"
]
dev = ["pytest>=8"]

[project.scripts]
gas-screening = "gas_screening_mvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gas_screening_mvp = ["data/*.csv", "data/*.yml", "config/*.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
